@@ -1,5 +1,7 @@
 1.7.9.dev0
  * #295: Add a SQLite database dump/restore hook.
+ * #628: Add Healthchecks "log" state to send borgmatic logs to Healthchecks without signalling
+   success or failure.
 
 1.7.8
  * #620: With the "create" action and the "--list" ("--files") flag, only show excluded files at
